update so far - new in this commit - 1. star plot tooltip fixed 2. show all the star plot in the single div without scrolling 3. though  legends need to be fixed
old commits -

nov 30 th -
update on bubble chart -
1. tooltip added to bubbles and legend
2. bubbles - will show id and which group it is in
3. hover over to legend to see how many patients are in that group

nov 29th -
hover over bubble legend to see its group

nov 28 th -
Modification on the bubble chart -
1. added border around the svg
2. removed x,y axis as they do not mean anything particularly
3. made the legends static and fixed the overlapping
4. zooming added - scroll mouse for zoom in and out
    to move around click on a bubble and move it
5. border is added around the bubbles and legend - looks cool i think

--- a/css/star_plot.css
+++ b/css/star_plot.css
@@ -3,22 +3,22 @@
     margin: auto;
     font-family: Arial;
   } */
-  #target {
+  /* #target {
     margin: 40px 0;
-  }
+  } */
   .star_wrapper {
     position: relative;
     display: inline-block;
 
   }
-  .star_chart {
+  /* .star_chart {
     margin-bottom: 40px;
-  }
+  } */
   .star-title {
-    font-size: 14px;
+    font-size: 10px;
   }
   .star-label {
-    font-size: 11px;
+    font-size: 7px;
     pointer-events: none;
   }
   .star-origin {
